*SVN*

* Added a third parameter to TextHelper#auto_link called href_options for specifying additional tag options on the links generated #1401 [tyler.kovacs@gmail.com]. Example: auto_link(text, :all, { :target => "_blank" }) to have all the generated links open in a new window.

* Fixed TextHelper#highlight to return the text, not nil, if the phrase is blank #1409 [patrick@lenz.sh]

* Fixed TagHelper such that :name and 'name' keys in the options doesn't result in two attributes #1455 [take_tk]

* Ensure that helpers are only available to the controllers where they are defined and their subclasses.  #1394 [kdole@tamu.edu]

* render("foo/bar") works with a layout again 

* Fixed double-singularization on scaffolded pagination call (Address would be turned into Addres) #1216, #1404 [nilsga]

* Removed the require hack used by functional testing to work around an earlier bug in rake.

* Allow distance_of_time_in_words to work with any value that responds to #to_time (like dates) #969

* Support :render option for :verify #1440 [TobiasLuetke]

* Updated vendor copy of html-scanner lib to 0.5.1, for bug fixes and optimizations

* Changed test requests to come from 0.0.0.0 instead of 127.0.0.1 such that they don't trigger debugging screens on exceptions, but instead call rescue_action_in_public

* Modernize scaffolding to match the generator: use the new render method and change style from the warty @params["id"] to the sleek params[:id].  #1367

* Include :id in the action generated by the form helper method.  Then, for example, the controller can do Model.find(params[:id]) for both edit and update actions.  Updated scaffolding to take advantage.  #1367

* Add assertions with friendly messages to TestCase#process to ensure that @controller, @request, and @response are set.  #1367

* Arrays sent via multipart posts are converted to strings #1032 [dj@omelia.org]

* render(:layout => true) is a synonym for render(:layout => nil)
